2009-02-05  Frederic Peters  <fpeters@0d.be>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.25.90

2009-02-01  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: remove gnome-volume-manager
	and nautilus-cd-burner (deprecated now), and move intltool to an
	external dependency

2009-01-31  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: remove gnome-build
	  (integrated in anjuta)

2008-01-21  Lucas Rocha  <lucasr@gnome.org>

	* smoketesting/tarball-conversion.config: add brasero,
	gnome-user-share and evolution-mapi.
	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.25.5

2009-01-09  Frederic Peters  <fpeters@0d.be>

	* smoketesting/tarball-conversion.config: removed GTK+ 2.15 limit.

2008-01-07  Lucas Rocha  <lucasr@gnome.org>

	* versions: fix perl modules and gtk+ versions.

2008-01-07  Lucas Rocha  <lucasr@gnome.org>

	* smoketesting/tarball-conversion.config: set gtk+ limit to 2.15
	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.25.4

2008-12-22  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.25.3 (work done by Frederic Peters)

2008-12-18  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: remove eel from the release
	sets.

2008-11-26  Vincent Untz  <vuntz@gnome.org>

	* versions-stable: update for ephy 2.24.2.1

2008-11-25  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* versions-stable: update for 2.24.2

2008-11-21  Vincent Untz  <vuntz@gnome.org>

	* mail-maintainers.py: make the jhbuild moduleset more visible and add
	a comment about updating it before running the script.

2008-11-14  Frederic Peters  <fpeters@gnome.org>

	* mail-maintainers.py, mail-maintainers.blacklisted-modules: added
	script to send an email to module maintainers

2008-11-06  Vincent Untz  <vuntz@gnome.org>

	* versions: oops, perl updated.
